# simulation-foundry-core

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
apps/mass_spring_damper/: mass_spring_damper.cpp
cmake/: test-presets.json
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  conanfile.txt
cpp/cmake/: package-presets.json  workflow-presets.json
cpp/docs/: CMakeLists.txt  Doxyfile.in
cpp/examples/mass_spring_damper/: CMakeLists.txt  mass_spring_damper.cpp
cpp/include/ode/: euler_forward.h  runge_kutta_4.h  solution.hpp
cpp/include/utils/: utils.h
cpp/src/: CMakeLists.txt
cpp/src/ode/: euler_forward.cpp  runge_kutta_4.cpp
cpp/src/utils/: utils.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/ode/: CMakeLists.txt  euler_forward_test.cpp  runge_kutta_4_test.cpp
cpp/tests/utils/: CMakeLists.txt  utils_test.cpp
docs/bindings/python/source/: api.md  conf.py  index.md  ode.md  optimisers.md
examples/bindings/python/optimisation/: optimisation.ipynb
examples/core/linear_solve/: linear_solve.cpp
examples/core/mass_spring_damper/: mass_spring_damper.cpp
examples/core/optimisation/: optimisation.cpp
examples/core/root_finding/: root_finding.cpp
examples/mass_spring_damper/: mass_spring_damper.cpp
include/bindings/python/ode/: euler_backward_bindings.hpp  euler_forward_bindings.hpp  runge_kutta_4_bindings.hpp  solution_bindings.hpp
include/bindings/python/optimisers/: genetic_algorithm_bindings.hpp  gradient_descent_bindings.hpp  particle_swarm_bindings.hpp  solution_bindings.hpp
include/core/ode/: euler_backward.hpp  euler_forward.hpp  runge_kutta_4.hpp
include/core/optimisers/: genetic_algorithm.hpp  gradient_descent.hpp  particle_swarm.hpp  solution.hpp
include/core/simulation/blocks/: block.hpp  integrator.h
include/core/simulation/core/: system.hpp
include/core/utils/: math.hpp  random.hpp
include/linear_solvers/: gaussian_elimination.h
include/ode/: solution.hpp
include/solvers/: euler_forward.h  ode.h  runge_kutta_4.h
include/utils/: utils.h
python/: .gitignore  README.md  pyproject.toml
python/scripts/: mass_spring_damper.ipynb
scripts/: mass_spring_damper.ipynb
src/: CMakeLists.txt
src/bindings/python/: CMakeLists.txt  bindings.cpp
src/bindings/python/ode/: euler_backward_bindings.cpp  euler_forward_bindings.cpp  runge_kutta_4_bindings.cpp  solution_bindings.cpp
src/bindings/python/optimisers/: genetic_algorithm_bindings.cpp  gradient_descent_bindings.cpp  particle_swarm_bindings.cpp  solution_bindings.cpp
src/core/finite_difference/: forward_difference.cpp
src/core/linear_solvers/: gaussian_elimination.cpp
src/core/ode/: euler_backward.cpp  euler_forward.cpp  runge_kutta_4.cpp
src/core/optimisers/: genetic_algorithm.cpp  particle_swarm.cpp
src/core/root_finders/: newton_raphson.cpp
src/core/simulation/blocks/: integrator.cpp
src/core/simulation/ode/: euler_forward.cpp
src/core/simulation/system/: simulator.cpp  system.cpp
src/core/utils/: math.cpp  output.cpp
src/linear_solvers/: gaussian_elimination.cpp
src/ode/: euler_forward.cpp  runge_kutta_4.cpp
src/root_finders/: newton_raphson.cpp
src/solvers/: euler_forward.cpp  ode.cpp  runge_kutta_4.cpp
src/utils/: utils.cpp
tests/bindings/python/ode/: euler_backward_test.py  euler_forward_test.py  runge_kutta_4_test.py  solution_test.py
tests/core/finite_difference/: forward_difference_test.cpp
tests/core/linear_solvers/: gaussian_elimination_test.cpp
tests/core/ode/: euler_backward_test.cpp  euler_forward_test.cpp  runge_kutta_4_test.cpp
tests/core/optimisers/: CMakeLists.txt  gradient_descent_test.cpp
tests/core/root_finders/: newton_raphson_test.cpp
tests/core/utils/: math_test.cpp  output_test.cpp
tests/linear_solvers/: gaussian_elimination_test.cpp
tests/ode/: CMakeLists.txt  runge_kutta_4_test.cpp
tests/utils/: CMakeLists.txt  output_test.cpp  utils_test.cpp
